{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a1757954-87d2-4dda-93f2-4ba046d82b21",
            "actions": [
                {
                    "name": "RaiseRightArm",
                    "id": "e7d37a12-80af-4d96-839c-eeb704055569",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "LowerRightArm",
                    "id": "250ca065-6d43-4cac-ba86-4af3051ba6ce",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "RaiseLeftArm",
                    "id": "10817e9a-79eb-459b-bcb9-e1dfb8e345b5",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "LowerLeftArm",
                    "id": "5094ad8a-7cd9-47ee-bee2-7b7078a769a2",
                    "expectedControlLayout": "",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e75515cd-eb16-4919-8520-c236288c7689",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RaiseRightArm",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "919e1701-382a-4903-bf9e-b5cc46830dbb",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LowerRightArm",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "65470e16-4447-4b62-a372-cbe631d4c7cf",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RaiseLeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "525fce98-27ba-4953-bb01-4df61f59c8d2",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LowerLeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": []
}